fix score board position on mobile responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,7 +354,7 @@ header > h1 {
         margin: 20px auto;
         border: 3px solid white;
         border-radius: 5px;
-        height:130px;
+        height:80px;
         width: 240px;
         color: white;
         text-align: center;
